[project]
name = "chtsh-mcp-server"
version = "0.1.0"
description = "An MCP server for querying cht.sh cheat sheets and documentation."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [
    { name = "Dephilia", email = "me@dephilia.moe" },
]
dependencies = [
    "aiohttp>=3.12.13",
    "mcp[cli]>=1.10.1",
]
